Finish polishing the report
This should be one of the last, if not the last, change made to this
report.

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -268,7 +268,6 @@
 
 %%% Our assignments %%%
 
-% TODO: make the titles preserve case-sensitivity!
 @inproceedings{DIT348A1,
   title={Week 1, Assignment 1 in course DIT348 H23},
   author={{[Undisclosed Authors]}},
@@ -301,3 +300,4 @@
   year={2023}
 }
 
+%%% Our assignments %%%
