--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -572,33 +572,33 @@ Additionally, a reasonable balance (of the strategies) is to be decided upon by
 team members and their management team based on their domain of expertise and
 experience \cite{Dyba2005}.
 
-% TODO: continue reviewing here!!!
-
 Moreover, a recurring barrier of SPI initiatives is the lack of \textbf{SPI
-awareness} which stems from the lack of commitment from the management team
-and poor communication \cite{Niazi2010}. Niazi further led an empirical study 
-to identify critical success factors associated with SPI initiatives, and,
-unsurprisingly, sufficient SPI awareness was identified as one of the most
-critical factors \cite{Niazi2006}. Based on the implications of their studies,
-it can be concluded that the management team should be committed to the SPI
-initiative in a way that they are able to communicate the benefits; this is
-achievable with a series of workshops and training sessions \cite{Niazi2006}.
+awareness} which stems from the lack of commitment from the management team and
+poor communication \cite{Niazi2010}. Niazi et al. \cite{Niazi2006} conducted an
+empirical study to identify critical success factors associated with SPI
+initiatives, and, unsurprisingly, sufficient SPI awareness was identified as a
+key factor. Based on the implications of their study, it can be concluded that
+management teams should be committed to the SPI initiatives in a way that they
+are able to communicate benefits to the employees clearly and convincingly.
+This is achievable with a series of workshops and training sessions
+\cite{Niazi2006}.
 
-Ultimately, a set of human factors are attributed to the challenges that are
-encountered in SPI projects. Beecham et al. \cite{Beecham2003}
+Ultimately, a set of human factors is attributed to the challenges that are
+encountered in SPI-oriented projects. Beecham et al. \cite{Beecham2003}
 postulate that human-related factors such as \textit{"lack of motivation"},
 \textit{"lack of commitment"}, \textit{"lack of training"}, and \textit{"lack
-of experience"}, to name a few, are universally applicable to SPI projects.
-These, however, are not so easily addressed, and require a significant amount
-of time and effort (beyond the management team's control) to be resolved.
-Nevertheless, an empirical study from Pakistan \cite{Danish2010} suggests that
-\textbf{recognition} is a key factor that motivates employees to perform better,
-which in turn, leads to a more successful SPI effort. The study further
-recommends that the management team should enable employees to participate in
-the decision-making process (to some extent, of course), so that the employees
-feel that their insights are perceived as invaluable and are taken into
-account. All in all, the implications of the study suggest that the management
-team should strive to establish a \textbf{culture of trust} in a prosperous
+of experience"}, to name a few, are universally recognized in almost any
+industry. These, however, are not so easily dealt with, and require a
+significant amount of time and effort to be resolved, which is typically beyond
+the management team's control (i.e., other bodies of the organization need to
+be involved). Nevertheless, an empirical study from Pakistan \cite{Danish2010}
+suggests that \textbf{recognition} is a key factor that motivates employees to
+perform better, which in turn, leads to a more successful SPI effort. The study
+further recommends that management teams should enable employees to participate
+in the decision-making processes (to some extent, of course) so that the
+employees feel that their insights are perceived as valuable and are taken into
+account. All in all, the implications of this study suggest that management
+teams should strive to establish a \textbf{culture of trust} in a prosperous
 environment where all parties are fairly treated and are able to communicate
 freely \cite{Danish2010}.
 
@@ -610,41 +610,41 @@ Figure~\ref{fig:process-diagram}. In this section, some key aspects of the
 diagram are described in more detail.
 
 Most importantly, the task definition \textit{"Cross-team meeting"} has been
-added. This change should address the SPI initiative in terms of enhancing
-cross-team communication efforts and the detection of integration issues (see
-the last paragraph of Section~\ref{sec:experiences} and 3) from
+added. This change should address the SPI initiative in terms of enhancing a
+collective cross-team communication effort and the detection of integration
+issues (see the last paragraph of Section~\ref{sec:experiences} and 3) from
 Section~\ref{sec:proposal}). Simultaneously, a new role titled
 \textit{"Integration Lead"}, whose primary responsibility is represented with a
 new task definition \textit{"Oversee integration defects"}, has been added. The
 addition of this role is supposed to realize the second improvement step of 3)
 (see Section~\ref{sec:proposal}). During these meetings, an
-\textit{"Integration Issue Log"} is to be utilized which the Integration Lead
-is responsible for. Furthermore, participation of the PO is encouraged, and the
-other teams are invited to join the meetings too---they are depicted in a
+\textit{"Integration Issue Log"}, which the Integration Lead is responsible
+for, is to be utilized. Furthermore, participation of the PO is encouraged, and
+the other teams are invited to join the meetings too---they are depicted in a
 \textit{cluster} of several role definitions titled \textit{"Other Teams"}.
 
 The \fontfamily{qhv}\selectfont AKAMMO\rmfamily{} team members are represented
-with a single role definition, and the Integration Lead is a member of the team. The
-team, moreover, is supposed to maintain the DoD and the Kanban board (which are
-work product definitions). The team also performs \textit{"Sprint Planning"} and
-\textit{"Review \& Retrospective"} meetings (these remain unchanged and the
-descriptions from Section~\ref{sec:process} are still applicable). Lastly,
-following the principles of \textbf{incremental delivery}, the team, after each
-sprint, delivers an increment that undergoes a few stages ultimately resulting
-in an \textit{"evaluated increment"} which servers as a basis for the following
-sprint.
+with a single role definition, and the Integration Lead is a member of the
+team. The team, moreover, is supposed to maintain a DoD and a Kanban board
+(which are both work product definitions). The team also performs
+\textit{"Sprint Planning"} and \textit{"Review \& Retrospective"} meetings
+(these remain unchanged and the descriptions from Section~\ref{sec:process} are
+still applicable). Lastly, following the principles of \textbf{incremental
+delivery}, the team, after each sprint, delivers an increment that undergoes a
+few stages ultimately resulting in an \textit{"evaluated increment"} which
+servers as a basis for the following sprint.
 
 \section{Bonus Task: Scrum of Scrums}
 \label{sec:bonus_task}
 
 A common pattern that is observed when using a \textbf{Scrum of Scrums}
 (hereinafter abbreviated as SoS) approach is that the role of a Scrum Master
-during an SoS meeting resembles the role of a Project Manager
+(during an SoS meeting) resembles the role of a Project Manager
 \cite{Larman2010}, and this is not desirable as per the Scrum principles (using
 the well-acclaimed Scrum Guide \cite{Schwaber2020} as a reference). Supposing
-that the Scrum Master does not rotate among the teams, then the Scrum Master,
-put simply, makes decisions on behalf of the teams, so self-organization (which
-is a key principle \cite{Dikert2016}) is not attainable \cite{Larman2010}.
+that the Scrum Master does not rotate among teams, then the Scrum Master, put
+simply, makes decisions on behalf of the teams, so self-organization (which is
+a key principle \cite{Dikert2016}) is largely hindered \cite{Larman2010}.
 However, this can, to a certain extent, be mitigated by rotating the role of a
 Scrum Master among the members of the teams. Nevertheless, other challenges are
 still present and are discussed next.
@@ -652,37 +652,36 @@ still present and are discussed next.
 Paasivaara et al. in their study conclude that SoS meetings do not function
 well in large-scale projects with many participants that represent "disjoint
 interests and concerns" \cite{Paasivaara2012}. Typically, a stand-up is not
-longer than 15 minutes (in a team of 5-9 members, for instance,
-\cite{Schwaber2020}) and, naturally, this time frame is not feasible for an SoS
-effort with many teams participating. Therefore, many of these meetings become
-overly time-consuming and ultimately counterproductive, cause frustration, and
-yield little to no value \cite{Paasivaara2012}. This is likely a rather
-unfortunate result of a phenomenon described by Dings\o{}yr et al.
-\cite{Dingsoyr2019} who state that practitioners embrace frameworks for
-large-scale Agile without a proper consideration of the underlying problem(s)
-they are trying to solve. The authors further postulate that frameworks should
-never represent goals; instead, the frameworks should help to achieve
-particular goals \cite{Dingsoyr2019}. As a consequence, many organizations may
-hurriedly adopt the SoS approach, just because it entails the word
-\textit{"Scrum"} in some way, without considering whether the approach is
-suitable for their needs.
+longer than 15 minutes (in a team of 5-9 members \cite{Schwaber2020}, for
+instance) and, naturally, this time frame is not feasible for an SoS effort
+with many teams participating. Therefore, many of these meetings become overly
+time-consuming and ultimately counterproductive, cause frustration, and yield
+little to no value \cite{Paasivaara2012}. This is likely a rather unfortunate
+result of a phenomenon described by Dings\o{}yr et al. \cite{Dingsoyr2019} who
+state that practitioners embrace frameworks for large-scale Agile without a
+proper consideration of the underlying problem(s) they are trying to solve. The
+authors further postulate that frameworks should never represent goals;
+instead, the frameworks should help to achieve particular goals
+\cite{Dingsoyr2019}. As a consequence, many organizations may hurriedly adopt
+the SoS approach, just because it consists of the word  \textit{"Scrum"} in
+some way, without considering whether the approach is suitable for their needs.
 
 It is therefore evident that SoS meetings \underline{are not} a silver bullet
 to address inter-team coordination in larger companies. In fact, based on the
-previous claims, it is not recommended to solely rely on SoS meetings at all.
-The findings of Paasivaara et al. suggest that SoS meetings can be a viable
-option in the event of \textit{"smaller, focused inter-team meetings with
-participants having joint goals and interests"} \cite{Paasivaara2012}.
-Furthermore, highly skilled teams are assumed with a broad understanding of the
-domain and the Agile practices \cite{Sutherland2007}. On the other hand,
-adapting \textbf{Spotify Guilds} (that largely rely on self-organization,
-autonomy, and a sense of community) \cite{Smite2019} may be a more sensible
-approach, for instance. Spotify has been employing Agile principles for many
-years, and the company has been able to scale Agile to great extents
-\cite{Alqudah2016}. Needless to say, their approach may not be a drop-in
-solution for all arbitrary cases, albeit it should be treated as a viable
-alternative and a source of inspiration to other large-scale companies in
-pursuit of a \textbf{suitable} approach to inter-team coordination.
+previous observations, it is not recommended to solely rely on SoS meetings at
+all. The findings of Paasivaara et al. suggest that SoS meetings can be a
+viable option in the event of smaller and focused groups that share "joint
+goals and interests" \cite{Paasivaara2012}. Furthermore, highly skilled teams
+with a broad understanding of the domain and the Agile practices are assumed
+\cite{Sutherland2007}. On the contrary, adopting \textbf{Spotify Guilds} (that
+largely rely on self-organization, autonomy, and a sense of community)
+\cite{Smite2019} may be a more sensible approach, for instance. Spotify has
+been employing Agile principles for many years, and the company has been able
+to scale Agile to great extents \cite{Alqudah2016}. Needless to say, their
+approach may not be a \textit{drop-in} solution for all arbitrary cases, albeit
+it should be treated as a viable alternative and a source of inspiration to
+other large-scale companies in pursuit of a \textbf{suitable} approach to
+inter-team coordination.
 
 \section{Summary and Lessons Learned}
 \label{sec:summary}
@@ -691,13 +690,16 @@ workshops, and have identified several shortcomings of the process. As a
 result, an SPI effort was proposed to address the shortcomings with the help of
 GQM, and the process was redesigned accordingly. Simultaneously, the
 observations made were paired with relevant literature and studies to provide a
-more comprehensive overview of the issues at hand. Interestingly, it has been
+more comprehensive overview of the topics discussed. Interestingly, it has been
 observed that the abundance of SPI techniques and models is rather overwhelming
 than helpful, and practitioners should exercise caution when selecting a
-particular technique or model. In addition, SPI awareness should be made a
-central priority in any development endeavor. Lastly, we have discussed the SoS
-approach and its applicability to large-scale projects, and briefly provided an
-alternative approach that is endorsed by Spotify.
+particular technique or a model. In addition, SPI awareness should be made a
+central priority in any development endeavor. Besides, teams should consolidate
+their efforts to establish a culture of inter-team trust and communication.
+Lastly, we have discussed the SoS approach and its applicability to large-scale
+projects, and briefly provided an alternative approach that is endorsed by
+Spotify.
+
 % This is used to generate the references section. See mybibfile.bib for the
 % bib sources.
 \bibliographystyle{IEEEtran}
