Add micro-changes, rename source to `main.tex`

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-%% report_template.tex
+%% main.tex
 %% V1.0
 %% 2012-03-16
 %% by Jesper Pedersen Notander
@@ -44,7 +44,7 @@
 %% ** Modified files should be clearly indicated as such, including  **
 %% ** renaming them and changing author support contact information. **
 %%
-%% File list of work: report_template.tex
+%% File list of work: main.tex
 %%*************************************************************************
 
 
@@ -59,14 +59,13 @@
 \title{On the Design of Software Processes and Software Process Improvement in
 the Context of Lego Scrum Workshops}
 
-% Leave as is to ensure anonymous grading.
 \author{
-\IEEEauthorblockN{ANONYMOUS AUTHOR}
-\IEEEauthorblockA{Examination in DIT348 Software Development Methodologies\\
-Department of Computer Science and Engineering\\
-University of Gothenburg\\
-Gothenburg, Sweden}}
-
+\IEEEauthorblockA{
+  Michal Spano\\
+  Department of Computer Science and Engineering\\
+  Chalmers and the University of Gothenburg\\
+  spano@chalmers.se}
+}
 \maketitle
 
 \begin{abstract}
